--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -22,7 +22,8 @@
 
     baseUrl: 'src',
     paths: {
-      spec: '../spec'
+      spec: '../spec',
+      lib:  '../lib'
     }
   }, ['spec/inventory_spec'], function(inventory) {
     jasmine.getEnv().execute();
