--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -25,7 +25,7 @@
       spec: '../spec',
       lib:  '../lib'
     }
-  }, ['spec/inventory_spec'], function(inventory) {
+  }, ['spec/InventoryModel_spec'], function(inventory) {
     jasmine.getEnv().execute();
 
   });
